--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "<$= _.slugify(appname) $>",
-  "version": "<$= version $>",
+  "name": "dim-spa",
+  "version": "1.0.0",
   "private": true,
   "main": "server/index.js",
   "dependencies": {
